feat : invited user links
