# app/Modules/Auth/DTOs/RegisterDTO.php
@@ -9,7 +9,8 @@ class RegisterDTO extends BaseDTO
     public string $email;
     public string $display_name;
     public string $password;
-    public string $tenant_id;
+    public ?string $tenant_id = null;
+    public ?string $invitation_token = null;
     public ?string $device_name = null;
 
     public function __construct(array $attributes = [])
